--- a/TechChallenge_1.API/appsettings.json
+++ b/TechChallenge_1.API/appsettings.json
@@ -1,5 +1,5 @@
 {
   "AppSettings": {
-    "ConnectionString": "Data Source=localhost\\sqlexpress01;Initial Catalog=Contatos;Persist Security Info=True;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=True;"
+    "ConnectionString": "Data Source=temporario-clademir.database.windows.net;Initial Catalog=techChallenge_1;Persist Security Info=True;User ID=clademirzampieri;Password=P@ssw0rd;TrustServerCertificate=True;"
   }
 }
